<resources>
    <string name="app_name">My Locations App</string>
    <string name="title_activity_maps">Map</string>

    <!-- PERMISSIONS -->
    <string name="permissions_ok">I agree</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="location_permission_message">This app needs the Location permission, please accept to use sensors accordingly</string>

    <!-- TOOLBAR TITLES -->
    <string name="toolbar_my_locations">My locations</string>
    <string name="toolbar_location_details">Location details</string>
    <string name="toolbar_add_location">Add location</string>
    <string name="toolbar_edit_location">Edit location</string>

    <!-- ADD / UPDATE LOCATION TEXTS -->
    <string name="add_location_label">Label:\u0020</string>
    <string name="add_location_address">Address:\u0020</string>
    <string name="add_location_latitude">Latitude:\u0020</string>
    <string name="add_location_longitude">Longitude:\u0020</string>
    <string name="add_location_add_label">Please enter the location label</string>
    <string name="add_location_add_address">Please enter the location address</string>
    <string name="add_location_add_latitude">Please enter the latitude coordinate</string>
    <string name="add_location_add_longitude">Please enter the longitude coordinate</string>
    <string name="add_location_label_empty">Please enter a label</string>
    <string name="add_location_label_already_exists">The label already exists; please choose other label</string>
    <string name="add_location_address_empty">Please fill in the address</string>
    <string name="add_location_latitude_invalid">Please enter a valid latitude</string>
    <string name="add_location_longitude_invalid">Please enter a valid longitude</string>
    <string name="update_location_longitude_invalid">Save changes</string>
    <string name="update_location_toolbar_title">Edit location</string>

    <!-- MENUS -->
    <string name="location_details_edit_menu">Edit location</string>
    <string name="location_details_delete_menu">Delete location</string>

    <!-- DELETE -->
    <string name="location_details_delete_confirmation">Are you sure that you want to delete this location?</string>
    <string name="location_details_delete">Delete</string>
    <string name="location_details_cancel">Cancel</string>

    <!-- EMPTY LIST -->
    <string name="empty_list">The list is empty, please add a location!</string>
</resources>
